RDT3 - Fixed search break on small screen

--- a/src/css/hdruk.css
+++ b/src/css/hdruk.css
@@ -297,7 +297,7 @@ body {
 
 #SearchInputSpan{
   display: inline-block;
-  width: 90%;
+  width: 75%;
   height: 40px;
   outline: none;
   border: 0;
